# open-prices

./: .dockerignore  .env  .env.example  .env.examples  .flake8  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  404.html  AGENTS.md  API.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  Makefile  README.md  alembic.ini  build_mkdocs.sh  docker-compose.yml  index.html  manage.py  mkdocs.yml  nginx.conf  pyproject.toml  release-please-config.json  requirements.txt
.github/: dependabot.yml  labeler.yml
.github/workflows/: auto-assign-pr.yml  codeql.yml  container-build.yml  container-deploy.yml  generate-docs.yml  github-projects.yml  label.yml  merge-conflicts-autolabel.yml  pre-commit.yml  quality-check.yml  release-please.yml  sdk-update-notification.yml  semantic-pr.yml  top-issues.yml
add-a-price/: index.html
add-multiple-prices/: index.html
alembic/: env.py
alembic/versions/: 20231112_1203_01907c7134ee_create_user_table.py  20231112_1827_43571a31006d_create_price_table.py  20231115_1745_20145023aad0_add_proof_table.py  20231116_1432_b3b951e016d0_create_location_table.py  20231116_1559_1c8431a64d3a_add_price_location_relationship.py  20231121_1856_df15f7cacf48_create_product_table.py  20231121_2013_7103fb49908f_add_price_product_relationship.py  20231123_0828_5acb37b190cc_add_prices_category_tag_field.py  20231123_1400_012466c0013e_add_prices_labels_tags_field.py  20231125_1726_cce1da5c6733_add_proof_type_field.py  20231213_1307_727cb6912bd5_add_prices_product_name_field.py  20231218_1553_1e60d73e79cd_add_product_brands_field.py  20231229_1023_24d71d56d493_add_origins_tags_field.py  20240105_0923_3f8d293e669e_add_product_unique_scans_n_column.py  20240109_1330_1bf4306fff2f_set_unique_scans_n_default_to_0.py  20240110_1508_007443669adc_add_proof_is_public_field.py  20240111_0914_a8ad2f078f3f_add_product_price_per_field.py  20240111_0945_6492fd03aab5_add_product_price_count_field.py  20240111_1031_fffca9fb2990_add_price_price_without_discount_field.py  20240111_1051_314feff3af1e_add_index_on_product_price_count.py  20240114_0901_13bb81a35e60_add_location_price_count_field.py  20240114_1326_868640c5012e_add_user_price_count_field.py  20240115_1350_3c2015517236_add_session_table.py  20240125_1004_f3c157567667_add_price_price_is_discounted_field.py  20240130_1352_45ebe30cc6af_add_product_categories_tags.py  20240204_1632_1cf89b834379_add_proof_price_count_field.py  20240206_0105_7ac630e20d66_add_user_is_moderator_field.py  20240207_1207_f657e5ef0a6b_add_product_product_quantity_unit_field.py  20240209_1744_76d67467ff32_add_product_categories_tags_field.py  20240215_1124_d2d14a95ae1c_add_product_brands_tags_field.py  20240215_1149_770709475132_add_product_labels_tags_field.py  20240303_1626_d98171064c5a_add_product_nutriscore_grade_field.py  20240309_1254_7055fe5b4775_add_product_ecoscore_grade_field.py  20240314_1043_295d1735cc72_add_product_nova_group_field.py  20240317_2358_77331afdcd8e_add_product_source_last_synced_field.py  20240417_0942_3e6064e45f9a_remove_proof_is_public_flag.py  20240520_1604_dd4776351212_add_location_osm_tag_key_osm_tag_value_fields.py  20240520_1704_2737db183adb_add_location_osm_address_country_code_field.py  20240525_2006_8a6892a20b5d_add_price_source_field.py  20240604_1215_8ec02f1af257_add_proof_source_field.py  (+6 more)
app/: __main__.py  api.py  auth.py  config.py  crud.py  db.py  enums.py  models.py  scheduler.py  schemas.py  tasks.py  utils.py
app/cli/: main.py
app/routers/: auth.py  locations.py  prices.py  products.py  proofs.py  users.py
app/routes/: auth.py  locations.py  prices.py  products.py
app/templates/: index.html
app/views/: prices.py  proofs.py
community/: index.html
community/CHANGELOG/: index.html
community/CONTRIBUTING/: index.html
community/INSTALL/: index.html
community/funding/: index.html
community/github/: index.html
community/presentations/: index.html
community/project-management/: index.html
community/reuses/: index.html
community/slack/: index.html
community/ux-ui/: index.html
community/weekly-meetings/: index.html
conf/: OCR.yaml
config/: settings.py  urls.py
data/: .gitkeep
data/gdpr/: README.md  create_prices_from_gdpr_csv.py  gdpr_field_mapping.csv  merge_two_csv_files.py
dev/CHANGELOG/: index.html
dev/CONTRIBUTING/: index.html
dev/INSTALL/: index.html
dev/contributing/: index.html
dev/install/: index.html
docker/: dev.yml  docker-entrypoint.sh  ocr.yml  prod.yml
docs/: .pages  README.md  add-a-price.md  add-multiple-prices.md  local-development.md  maintenance.md
docs/community/: README.md  funding.md  github.md  presentations.md  project-management.md  reuses.md  slack.md  ux-ui.md  weekly-meetings.md
docs/dev/: contributing.md  install.md
docs/guides/: API.md  README.md  data.md
docs/topics/: README.md  core.md  gamification.md  moderation-historisation.md  open-food-facts-product-data.md  openstreetmap-location-data.md  outlier-detection.md
docs/tutorials/: add-a-price.md  add-multiple-prices-receipt.md  add-multiple-prices-shelf.md  add-multiple-prices.md
fixtures/: data.yaml  import_data.py
guides/: index.html
guides/API/: index.html
guides/data/: index.html
guides/web-add-multiple-prices-receipt/: index.html
guides/web-add-multiple-prices-shelf/: index.html
local-development/: index.html
maintenance/: index.html
open_prices/: asgi.py  settings.py  urls.py  wsgi.py
open_prices/api/: pagination.py  serializers.py  tests.py  urls.py  utils.py  views.py
open_prices/badges/: admin.py  constants.py  factories.py  models.py  tests.py
open_prices/challenges/: admin.py  constants.py  factories.py  models.py  tests.py  validators.py
open_prices/common/: admin.py  authentication.py  constants.py  db_func.py  gemini.py  google.py  history.py  lookups.py  managers.py  middleware.py  openfoodfacts.py  openstreetmap.py  permission.py  tasks.py  (+4 more)
scripts/: README.md  anonymize_receipts.py  utils.py
search/: search_index.json
static/: index.html
tests/: test_api.py
topics/: index.html
www/: urls.py
(+284 files in other folders)
