[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
disable_error_code = ["no-untyped-call", "no-any-return"]
python_version = "3.11"
plugins = [
  "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = [
  "OSMPythonTools.nominatim",
  "apscheduler.*"
]
ignore_missing_imports = true
warn_return_any = false

[tool.poetry]
name = "open-prices"
version = "0.1.0"
description = "An open database of product prices"
authors = ["Open Food Facts <contact@openfoodfacts.org>"]
license = "AGPL-3.0 licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
babel = "^2.17.0"
blessed = "^1.20.0"
croniter = "^3.0.3"
django = "5.2.7"
django-cors-headers = "^4.9.0"
django-debug-toolbar = "^6.1.0"
django-extensions = "^4.1"
django-filter = "^25.2"
django-q2 = "^1.8.0"
django-simple-history = "^3.10.1"
django-solo = "^2.3.0"
djangorestframework = "^3.16.1"
drf-spectacular = "0.29.0"
factory-boy = "^3.3.3"
google-genai = "~1.46.0"
gunicorn = "^23.0.0"
ipython = "^9.6.0"
openfoodfacts = {version = "~3.1.0", extras = ["ml", "redis"]}
osmpythontools = "^0.3.6"
pillow = "^10.4.0"
psycopg2-binary = "~2.9.9"
python-multipart = "~0.0.7"
requests = "^2.32.5"
sentry-sdk = {extras = ["django"], version = "^2.43.0"}
typer = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"
freezegun = "^1.5.5"
httpx = "<1.0.0"
isort = "^7.0.0"
mdx-truly-sane-lists = "^1.3"
mkdocs = "^1.6.1"
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-material = "^9.6.23"
mypy = "^1.18.2"
pre-commit = "^3.8.0"
pydot = "^3.0.1"
pyparsing = "^3.2.5"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
toml-sort = "^0.24.3"
types-requests = "^2.32.4.20250913"
types-tqdm = "^4.67.0.20250809"
